# packaging2

./: .black.toml  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  build-package.sh  pyproject.toml  pytest.ini  run.sh  setup.cfg  setup.py
.github/workflow/: publish.yaml
.github/workflows/: publish.yaml
packaging2/: my_file.py  states_info.py
packaging2/my_folder/: cities.json  my_nested_file.py
tests/: test_slow.py  test_states_info.py
tests/test_my_folder/: test_my_nested_file.py
