[build-system]
# Minimum requirement for the build system to create
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mypkg = ["*.json"]

[project]
name = "fun-packaging"
version = "0.0.1"
authors = [
    {name = "Morgan Sell", email = "morganpsell@gmail.com"},
]
description = "My package built during the Udemy Python to Production course"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["python"]
license = { file = "MIT" }
classifiers = [
    "Programming Language :: Pyton :: 3",
]
dependencies = [
    "numpy",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
release = ["build", "twine"]
static-code-qa = ["pre-commit"]
dev = ["fun-packaging[test, release, static-code-qa]"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}